# Authenticator

./: .env.example  .gitignore  Cargo.toml  README.md  run.sh
api/: .env.example  Cargo.toml
api/api-mysql-template/: Cargo.toml
api/api-mysql-template/migrations/: 20240105012034_init.up.sql
api/api-mysql-template/src/: main.rs
api/api-mysql-template/src/config/: database.rs  mod.rs  state.rs
api/api-mysql-template/src/controllers/: authentication.rs  mod.rs  user.rs
api/api-mysql-template/src/middlewares/: mod.rs  roles.rs  session.rs
api/api-mysql-template/src/models/: authentication.rs  mod.rs  user.rs  validations.rs
api/api-mysql-template/src/responses/: error.rs  mod.rs  success.rs
api/api-mysql-template/src/routes/: authentication.rs  mod.rs  user.rs
api/api-mysql-template/src/services/: authentication.rs
api/api-mysql-template/src/utils/: jwt.rs
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
mailer/: .env.example  config.js  index.js  package.json  pnpm-lock.yaml
server/: Cargo.toml  endpoints.md
server/public/: index.html  tailwind.config.js
server/src/: main.rs
server/src/config/: database.rs  mod.rs  state.rs
server/src/controllers/: authentication.rs  mod.rs  user.rs
server/src/middlewares/: session.rs  validation.rs
server/src/models/: authentication.rs  user.rs  validations.rs
server/src/responses/: error.rs  mod.rs  success.rs
server/src/routes/: authentication.rs  mod.rs  user.rs
server/src/services/: authentication.rs  cookies.rs  jwt.rs  mod.rs  user.rs
src/: main.rs
storage/: .env  (+2 more)
(+105 files in other folders)
