[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
serde = "1.0.195"
serde_json = "1.0.111"
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.0" }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
cookie = "0.18.0"
mongodb = "2.8.0"
bson = "2.0.0"
chrono = "0.4.33"
tower-cookies = "0.10.0"
bcrypt = "0.15.0"
time = "0.3.31"
regex = "1.10.3"
lazy_static = "1.4.0"
jsonwebtoken = "9.2.0"
futures = "0.3.30"
reqwest = "0.11.23"
tower-serve-static = "0.1.1"
include_dir = "0.7.3"
