[package]
name = "auth_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
bcrypt = "0.15.0"
chrono = "0.4.31"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
regex = "1.10.2"
